--- a/api/definitions/trips.yml
+++ b/api/definitions/trips.yml
@@ -14,6 +14,7 @@ definitions:
     properties:
       id:
         type: string
+        format: uuid4
       name:
         type: string
       startDate:
