--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -98,5 +98,9 @@ jobs:
     container: swaggerapi/swagger-codegen-cli
     steps:
       - uses: actions/checkout@v2.3.4
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '20'
       - name: run the main swagger.yml validation
         run: java -jar /opt/swagger-codegen-cli/swagger-codegen-cli.jar validate -i ./api/swagger.yml
