--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -44,7 +44,7 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '20'
+          node-version: "20"
       - name: Docker build (target builder)
         run: docker build --target builder --file Dockerfile --tag allaboutapps.dev/aw/go-starter:builder-${GITHUB_SHA} .
       - name: Docker build (target app)
@@ -52,10 +52,10 @@ jobs:
       - name: Trivy scan
         uses: aquasecurity/trivy-action@master
         with:
-          image-ref: 'allaboutapps.dev/aw/go-starter:app-${{ github.sha }}'
-          format: 'sarif'
-          output: 'trivy-results.sarif'
-          severity: 'CRITICAL,HIGH'
+          image-ref: "allaboutapps.dev/aw/go-starter:app-${{ github.sha }}"
+          format: "sarif"
+          output: "trivy-results.sarif"
+          severity: "CRITICAL,HIGH"
           ignore-unfixed: true
       - name: Docker run (target builder)
         run: docker run -d --env-file $DOCKER_ENV_FILE --network "${{ job.services.postgres.network }}" --name=builder -it allaboutapps.dev/aw/go-starter:builder-${GITHUB_SHA}
@@ -87,7 +87,7 @@ jobs:
       - name: Upload Trivy scan results
         uses: github/codeql-action/upload-sarif@v2
         with:
-          sarif_file: 'trivy-results.sarif'
+          sarif_file: "trivy-results.sarif"
       - name: Stop container
         if: always()
         run: docker stop builder
@@ -97,8 +97,15 @@ jobs:
 
   swagger-codegen-cli:
     runs-on: ubuntu-latest
-    container: swaggerapi/swagger-codegen-cli
+    container:
+      image: swaggerapi/swagger-codegen-cli:latest
+      options: --user root
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4.1.7
+      - name: Update system and install Node.js
+        run: |
+          apk update
+          apk upgrade
+          apk add --no-cache nodejs npm
       - name: Run Swagger validation
-        run: java -jar /opt/swagger-codegen-cli/swagger-codegen-cli.jar validate -i ./api/swagger.yml
+        run: java -jar /opt/swagger-codegen-cli/swagger-code
