--- a/api/paths/trips.yml
+++ b/api/paths/trips.yml
@@ -36,57 +36,38 @@ paths:
           name: trip_name
           in: query
 
-        # TBA, queries not supported currently
-        # - type: string
-        #   required: false
-        #   x-nullable: true
-        #   description: Returns all beers matching the supplied yeast name, this performs a fuzzy match, if you need to add spaces just add an underscore (_).
-        #   name: yeast
-        #   in: query
-        # - type: string
-        #   required: false
-        #   x-nullable: true
-        #   format: date-time
-        #   description: Returns all beers brewed before this date, the date format is mm-yyyy e.g 10-2011
-        #   name: brewed_before
-        #   in: query
-        # - type: string
-        #   required: false
-        #   x-nullable: true
-        #   format: date-time
-        #   description: Returns all beers brewed after this date, the date format is mm-yyyy e.g 10-2011
-        #   name: brewed_after
-        #   in: query
-        # - type: string
-        #   required: false
-        #   x-nullable: true
-        #   description: Returns all beers matching the supplied hops name, this performs a fuzzy match, if you need to add spaces just add an underscore (_).
-        #   name: hops
-        #   in: query
-        # - type: string
-        #   required: false
-        #   x-nullable: true
-        #   description: Returns all beers matching the supplied malt name, this performs a fuzzy match, if you need to add spaces just add an underscore (_).
-        #   name: malt
-        #   in: query
-        # - type: string
-        #   required: false
-        #   x-nullable: true
-        #   description: Returns all beers matching the supplied food string, this performs a fuzzy match, if you need to add spaces just add an underscore (_).
-        #   name: food
-        #   in: query
-        # - type: string
-        #   required: false
-        #   x-nullable: true
-        #   description: Returns all beers matching the supplied ID's. You can pass in multiple ID's by separating them with a | symbol.
-        #   name: ids
-        #   in: query
-
       responses:
         "200":
           description: GetTripsResponse
           schema:
             $ref: ../definitions/trips.yml#/definitions/GetTripsResponse
+    post:
+      description: Creates a new trip
+      tags:
+        - trips
+      summary: Registers a new trip for the user
+      operationId: PostTripRoute
+      parameters:
+        - name: Payload
+          in: body
+          required: true
+          schema:
+            $ref: "../definitions/trips.yml#/definitions/PostTripPayload"
+      responses:
+        "201":
+          description: Trip created successfully
+          schema:
+            $ref: "../definitions/trips.yml#/definitions/Trip"
+        "400":
+          $ref: "../definitions/trips.yml#/responses/InvalidPayloadResponse"
+        "401":
+          $ref: "../definitions/trips.yml#/responses/UnauthorizedResponse"
+        "409":
+          description: "PublicHTTPError, type `TRIP_ALREADY_EXISTS`"
+          schema:
+            $ref: "../definitions/errors.yml#/definitions/PublicHTTPError"
+        "500":
+          $ref: "../definitions/trips.yml#/responses/InternalServerErrorResponse"
 
   /api/v1/trips/{id}:
     get:
